--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,8 @@
   <aside class="col-md-8">
     <section class="user_info">
       <h1>
-<% if current_user.admin? %>
-<li><%= link_to "View History", checkout_log_path %></li>
+<% if current_user.admin? || current_user==@user %>
+<li><%= link_to "View History", :action => :checkout, :controller => "checkout_logs", :id => @user.id %></li>
 <% end %>
   <li><%= @user.name %></li>
   <li><%= @user.email %></li>
