--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,9 @@
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      <%= link_to user.name, user %>
-      <% if current_user.admin?%> | <%= link_to "delete", user, method: :delete, data: { confirm: "Confirm?" } %>
+      <%= link_to user.name, user %> |
+     <% if current_user.admin?%>
+<% if user.admin?%> <%= link_to "Remove Admin", user ,:action => :removeadminstatus, :id => user.id, method: :post, data: { confirm: "Confirm?" } %> | <% end %> <% if user.member?%> <%= link_to "Remove Member", user, method: :delete, data: { confirm: "Confirm?" } %> <% end %> | <%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
       <% end %>
     </li>
   <% end %>
