--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,18 @@
         <li><%= link_to "Home", root_path %></li>
         <% if logged_in? %>
         <% if current_user.admin? %>
-          <li><%= link_to "Users", users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Users <b class="caret"></b>
+            </a>
+          <ul class="dropdown-menu">
+              <li><%= link_to "All Users", users_path, :controller => "user" %></li>
+              <li><%= link_to "Add Users", signup_path, :controller => "user" %></li>
+              <li><%= link_to "Admin Users", users_admins_path, :controller => "user" %></li>
+              <li><%= link_to "Member Users", users_members_path, :controller => "user" %></li>
+              <li><%= link_to "Search", users_search_path, :controller => "search" %></li>
+            </ul>
+          </li>
 	  <% end %>
           <li><%= link_to "Books", books_path %></li>
           <li class="dropdown">
