--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,18 +1,18 @@
 <% provide(:title, 'All users') %>
 
-<h1>All Library users</h1>
+<h1>Member Library users</h1>
 
 <ul class="users">
   <% @users.each do |user| %>
     <li>
+      <% if user.member?%>
       <%= link_to user.name, user %> |
      <% if current_user.admin?%>
-<% if user.admin?%> <%= link_to "Remove Admin", user ,:action => :removestatus, :id => user.id, :type => "admin",method: :post, data: { confirm: "Confirm?" } %> | 
-<% end %> 
 <% if user.member?%> <%= link_to "Remove Member", user,:action => :removestatus, :id => user.id, :type => "member", method: :post, data: { confirm: "Confirm?" } %> 
 <% end %> | 
 <%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
       <% end %>
+<% end %>
     </li>
   <% end %>
 </ul>
