Enhanced Search Functionality

--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,6 +1,14 @@
 <% provide(:title, 'All Books') %>
 
-<h1>All Library Books</h1>
+<h1>
+
+<%= form_tag(books_search_path, :method => "get", id: "search-form") do %>
+  <%= text_field_tag :search, params[:search], placeholder: "Universal Search for Books by ISBN/Title/Author/Description" %>
+  <%= submit_tag "Search", :name => nil %>
+<% end %>
+
+</h1>
+<h1>Search Results</h1>
 
 <ul class="books">
   <% @books.each do |book| %>
