--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,18 @@
             </ul>
           </li>
 	  <% end %>
-          <li><%= link_to "Books", books_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Books <b class="caret"></b>
+            </a>
+          <ul class="dropdown-menu">
+              <li><%= link_to "All Books", books_path, :controller => "book" %></li>
+              <% if current_user.admin? %>
+              <li><%= link_to "Add Books", addbook_path, :controller => "book" %></li>
+              <% end %>
+              <li><%= link_to "Search Books", books_search_path, :controller => "book" %></li>
+            </ul>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
