--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,12 +11,12 @@
     </p>
   </body>
 <div class="center jumbotron">
-  <h1>Welcome to the NCSU Libraries</h1>
+  <h1><strong>Welcome to the NCSU Libraries<strong></h1>
 
   <h2>
     Library Management System
   </h2>
 
 </div>
-
+<%= image_tag("ncstate2.png", :alt => "NCSU") %>
 </html>
