--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -4,15 +4,17 @@
 
 <ul class="users">
   <% @users.each do |user| %>
+<h5>
     <li>
       <% if user.admin?%>
       <%= link_to user.name, user %> |
      <% if current_user.admin?%>
-<% if user.admin?%> <%= link_to "Remove Admin", user ,:action => :removestatus, :id => user.id, :type => "admin",method: :post, data: { confirm: "Confirm?" } %>
+<% if user.admin?%> <%= link_to "Remove Admin", user_path(:id => user.id, :type => "admin") ,:controller => "admins" ,:action => :removestatus, method: :post, data: { confirm: "Confirm?" } %>
 <% end %> | 
 <%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
       <% end %>
 <% end %>
     </li>
+</h5>
   <% end %>
 </ul>
