--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,25 +1,25 @@
 <% provide(:title, 'All Books') %>
 
-<h1>
-
+<h5>
+<div class="input-group" align="center">
 <%= form_tag(books_search_path, :method => "get", id: "search-form") do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Universal Search for Books by ISBN/Title/Author/Description" %>
+  <%= text_field_tag :search, params[:search], placeholder: "Search for Books" %>
   <%= submit_tag "Search", :name => nil %>
 <% end %>
-
-</h1>
-<h1>Search Results</h1>
+</div>
+</h5>
+<h2><font color=black>Search Results</font></h2>
 
 <ul class="books">
   <% @books.each do |book| %>
-    <li>
-      <%= link_to book.title, book %>
+    <h4><li>
+      <%= link_to book.title, book %> |
       <%= book.author %>
       <% if current_user.admin?%> | <%= link_to "delete", book, method: :delete, data: { confirm: "Confirm?" } %>
 <% end %>
       <% if book.status?%> | <%= "Available to checkout"%>
 <% else %> | <%= "Checked out" =%>
       <% end %>
-    </li>
+    </li></h4>
   <% end %>
 </ul>
