--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,15 +4,17 @@
 
 <ul class="users">
   <% @users.each do |user| %>
+<h5>
     <li>
       <% if user.member?%>
       <%= link_to user.name, user %> |
      <% if current_user.admin?%>
-<% if user.member?%> <%= link_to "Remove Member", user,:action => :removestatus, :id => user.id, :type => "member", method: :post, data: { confirm: "Confirm?" } %> 
+<% if user.member?%> <%= link_to "Remove Member", user_path(:id => user.id, :type => "member"),:action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> 
 <% end %> | 
 <%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
       <% end %>
 <% end %>
     </li>
+</h5>
   <% end %>
 </ul>
