--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,24 +1,28 @@
 <% provide(:title, 'All users') %>
-<h1>
+<h5>
+<div class="input-group" align="center">
 <%= form_tag(users_search_path, :method => "get", id: "search-form") do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Universal Search for Users by Name/Email ID" %>
+  <%= text_field_tag :search, params[:search], placeholder: "search user" %>
   <%= submit_tag "Search", :name => nil %>
 <% end %>
-</h1>
+</div>
 
-<h1>Library users</h1>
+</h5>
+<h2><font color=black>Library users</form></h2>
 
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %> |
-     <% if current_user.admin?%>
-<% if user.admin?%> <%= link_to "Remove Admin", user ,:action => :removestatus, :id => user.id, :type => "admin",method: :post, data: { confirm: "Confirm?" } %> | 
+<% @users.each do |user| %>
+<h5>
+<li>
+<%= link_to user.name, user %> |
+<% if current_user.admin?%>
+<% if user.admin?%> <%= link_to "Remove Admin", user_path(:id => user.id, :type => "admin") ,:action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> | 
 <% end %> 
-<% if user.member?%> <%= link_to "Remove Member", user,:action => :removestatus, :id => user.id, :type => "member", method: :post, data: { confirm: "Confirm?" } %> |
+<% if user.member?%> <%= link_to "Remove Member", user_path(:id => user.id, :type => "member"),:action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> |
 <% end %> 
 <%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
-      <% end %>
-    </li>
-  <% end %>
+<% end %>
+</li>
+</h5>
+<% end %>
 </ul>
