--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,15 +4,17 @@
 
 <ul class="users">
   <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %> |
-     <% if current_user.admin?%>
-<% if user.admin?%> <%= link_to "Remove Admin", user ,:action => :removestatus, :id => user.id, :type => "admin",method: :post, data: { confirm: "Confirm?" } %> |
+<h5>
+<li>
+<%= link_to user.name, user %> |
+<% if current_user.admin?%>
+<% if user.admin?%> <%= link_to "Remove Admin", user_path(:id => user.id, :type => "admin") , :action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> |
 <% end %> 
-<% if user.member?%> <%= link_to "Remove Member", user,:action => :removestatus, :id => user.id, :type => "member", method: :post, data: { confirm: "Confirm?" } %> |
+<% if user.member?%> <%= link_to "Remove Member", user_path(:id => user.id, :type => "member"), :action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> |
 <% end %>  
 <%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
-      <% end %>
-    </li>
-  <% end %>
+<% end %>
+</li>
+<% end %>
+</h5>
 </ul>
