--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,12 +4,12 @@
 <div class="row">
   <aside class="col-md-8">
     <section class="user_info">
-      <h1>
+      
+<h3><%=  @user.name %></h3>
+<h3><%= "Email : " %><%=  @user.email %></h3>
 <% if current_user.admin? || current_user==@user %>
-<li><%= link_to "View History", :action => :checkout, :controller => "checkout_logs", :id => @user.id %></li>
+<h3><%= link_to "View Book History", :action => :checkout, :controller => "checkout_logs", :id => @user.id %></h3>
 <% end %>
-  <li><%= @user.name %></li>
-  <li><%= @user.email %></li>
 
 </h1>
     </section>
