--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About", static_pages_about_path %></li>
+      <li><h5><%= link_to "About", static_pages_about_path %></h5></li>
     </ul>
   </nav>
 </footer>
