--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -2,24 +2,39 @@
 
 <h1>Member Library users</h1>
 
-<ul class="users">
-  <% @users.each do |user| %>
+<table style="width:100%">
+<tr>
 <h5>
-<li>
+<th>User Name</th>
+<th>Remove Member Rights</th>
+</h5>
+</tr>
+
+<ul class="users">
+<% @users.each do |user| %>
+<tr>
+<% if !user.super?%>
 <% if user.member?%>
-<%= link_to user.name, user %> |
+<td>
+<%= link_to user.name, user %>
+</td>
 <% if current_user.admin?%>
 <% if user.member?%>
+<td>
 <% if !(current_user.id==user.id) %>
+<% if (user.book_taken==false) %>
 <%= link_to "Remove Member", user_path(:id => user.id, :type => "member"),:action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> 
-<% end %>
-<% end %> | 
-<% if !(current_user.id==user.id) %>
-<%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
+<% else %>
+<%= "User has checked out a book" %>
 <% end %>
 <% end %>
+</td>
+
+<% end %> 
 <% end %>
-    </li>
-</h5>
-  <% end %>
+<% end %>
+<% end %>
+</tr>
+<% end %>
 </ul>
+</table>
