--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,18 +2,44 @@
 
 <h1>All Library Books</h1>
 
-<ul class="books">
-  <% @books.each do |book| %>
-<h5>    
-<li>
-<%= link_to book.title, book %> |
-<font color="black"><i><%= " by " %></i><%= book.author %></font>
-<% if current_user.admin?%> | <%= link_to "delete", book, method: :delete, data: { confirm: "Confirm?" } %>
-<% end %>
-<% if book.status?%> | <font color="green"><%= "Available to checkout"%></font>
-<% else %> | <font color="red"><%= "Checked out" =%></font>
-<% end %>
-</li>
-<% end %>
+<table style="width:100%">
+<tr>
+<h5>
+    <th>Book Name</th>
+    <th>Author Name</th>
+    <th>Checkout Status</th>
+    <% if current_user.admin?%>
+    <th>Delete Book</th>
+    <% end %>
 </h5>
+</tr>
+
+<ul class="books">
+<% @books.each do |book| %>
+<tr>
+<td>
+<%= link_to book.title, book %>
+</td>
+<td>
+<font color="black"><%= book.author %></font>
+</td>
+<td>
+<% if book.status? %>
+<font color="green"><%= "Available to checkout"%></font>
+<% else %>
+<font color="red"><%= "Checked out" =%></font>
+<% end %>
+</td>
+
+<% if current_user.admin? %>
+<td>
+<% if book.status? %>
+<%= link_to "delete", book, method: :delete, data: { confirm: "Confirm?" } %>
+<% end %>
+</td>
+<% end %>
+
+</tr>
+<% end %>
 </ul>
+</table>
