--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,25 +1,60 @@
 <% provide(:title, 'All Books') %>
 
-<h5>
+<h4>
 <div class="input-group" align="center">
 <%= form_tag(books_search_path, :method => "get", id: "search-form") do %>
   <%= text_field_tag :search, params[:search], placeholder: "Search for Books" %>
   <%= submit_tag "Search", :name => nil %>
 <% end %>
 </div>
-</h5>
+</h4>
 <h2><font color=black>Search Results</font></h2>
 
+<table style="width:100%">
+<tr>
+<h5>
+    <th>Book Name</th>
+    <th>Author Name</th>
+    <th>Checkout Status</th>
+    <% if current_user.admin?%>
+    <th>Delete Book</th>
+    <% end %>
+</h5>
+</tr>
+
 <ul class="books">
-  <% @books.each do |book| %>
-    <h4><li>
-      <%= link_to book.title, book %> |
-      <%= book.author %>
-      <% if current_user.admin?%> | <%= link_to "delete", book, method: :delete, data: { confirm: "Confirm?" } %>
+<% @books.each do |book| %>
+<tr>
+
+<td>
+<%= link_to book.title, book %>
+</td>
+
+<td>
+<%= book.author %>
+</td>
+
+<td>
+<% if book.status?%>
+<font color="green"><%= "Available to checkout"%></font>
+<% else %>
+<font color="red"><%= "Checked out" =%></font>
 <% end %>
-      <% if book.status?%> | <%= "Available to checkout"%>
-<% else %> | <%= "Checked out" =%>
-      <% end %>
-    </li></h4>
-  <% end %>
+</td>
+
+
+<% if current_user.admin? %>
+<td>
+<% if book.status? %>
+<%= link_to "delete", book, method: :delete, data: { confirm: "Confirm?" } %>
+<% end %>
+</td>
+<% end %>
+
+
+</tr>
+<% end %>
 </ul>
+</table>
+
+
