--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,6 +46,7 @@
           </li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "New Users? Sign Up", membersignup_path, :controller => "user" %></li>
         <% end %>
       </ul>
     </nav>
