--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,11 +11,11 @@
     </p>
   </body>
 <div class="center jumbotron">
-  <h1><strong>Welcome to the NCSU Libraries<strong></h1>
 
-  <h2>
-    Library Management System
-  </h2>
+   <% if !current_user.nil? %>
+   <h2><strong>Hi! <%= current_user.name %><strong></h2>
+   <% end %>
+  <h1><strong>Welcome to the NCSU Libraries<strong></h1>
 
 </div>
 <%= image_tag("ncstate2.png", :alt => "NCSU") %>
