--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,25 +2,35 @@
 
 <h1>All Library users</h1>
 
-<ul class="users">
-  <% @users.each do |user| %>
+<table style="width:100%">
+<tr>
 <h5>
-<li>
-<%= link_to user.name, user %> |
-<% if current_user.admin?%>
-<% if !(current_user.id==user.id) %>
-<% if user.admin?%> <%= link_to "Remove Admin", user_path(:id => user.id, :type => "admin") , :action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> |
-<% end %> 
-<% end %> 
-<% if !(current_user.id==user.id) %>
-<% if user.member?%> <%= link_to "Remove Member", user_path(:id => user.id, :type => "member"), :action => :removestatus, method: :post, data: { confirm: "Confirm?" } %> |
-<% end %> 
-<% end %> 
-<% if !(current_user.id==user.id) %>
-<%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
-<% end %>
-<% end %>
-</li>
-<% end %>
+    <th>User Name</th>
+    <th>Delete User</th>
 </h5>
+</tr>
+<ul class="users">
+<% @users.each do |user| %>
+<tr>
+<% if !user.super?%>
+<td>
+<%= link_to user.name, user %>
+</td>
+
+<% if current_user.admin?%>
+<td>
+<% if !(current_user.id==user.id) %>
+<% if (user.book_taken==false) %>
+<%= link_to "Delete User", user, method: :delete, data: { confirm: "Confirm?" } %>
+<% else %>
+<%= "User has checked out a book" %>
+<% end %>
+<% end %>
+</td>
+<% end %>
+<% end %>
+</tr>
+
+<% end %>
 </ul>
+</table>
