Added Extra features

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,7 +50,7 @@
           </li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
-          <li><%= link_to "New Users? Sign Up", signup_path, :controller => "user" %></li>
+          <li><%= link_to "New Users? Sign Up", membersignup_path, :controller => "member" %></li>
         <% end %>
       </ul>
     </nav>
