--- a/app/views/suggested_books/edit.html.erb
+++ b/app/views/suggested_books/edit.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@suggested_book) do |f| %>
+    <%= form_for(@suggested_books) do |f| %>
 
       <%= f.label :isbn %>
       <%= f.text_field :isbn, class: 'form-control' %>
