--- a/app/views/suggested_books/show.html.erb
+++ b/app/views/suggested_books/show.html.erb
@@ -11,7 +11,7 @@
 </tr>
 
 <ul class="suggested_books">
-<% @suggested_book.each do |suggested_book| %>
+<% @suggested_books.each do |suggested_book| %>
 <tr>
 
 <td>
