--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,8 +8,10 @@
   <aside class="col-md-8">
     <section class="book_info">
 <% if current_user.admin? %>
-<h4><%= link_to "View History", checkout_log_path %></h4>
-<h4><%= link_to "Update Book Details", edit_book_path(@book) %></h4>
+	<% if CheckoutLog.find_by_book(@book.title) %>
+		<h4><%= link_to "View History", checkout_log_path %></h4>
+	<% end %>
+	<h4><%= link_to "Update Book Details", edit_book_path(@book) %></h4>
 <% end %>
 <h4><%= "ISBN: " %><font color=black><%= isbn=@book.isbn %></font></h4>
 <h4><%= "Title: " %><font color=black><%= title=@book.title %></font></h4>
@@ -17,31 +19,35 @@
 <h4><%= "Description: " %><font color=black><%= description=@book.description %></font></h4>
 
 <% if @book.status?%>
-<h4><%= "Status: " %><font color=green><%= "Available" %></font></h4>
+	<h4><%= "Status: " %><font color=green><%= "Available" %></font></h4>
 
-<% if current_user.member?%>
-<h4><%= button_to "Checkout for yourself", book_path(:id => @book.id, :type => "self"), method: :post %></h4>
-<% end %>
-<% if current_user.admin?%>
-<h4><%= form_tag(book_path, :method => "post", :type => "other",id: @book.id) do %>
-  <%= text_field_tag :email, params[:email], placeholder: "Email ID" %>
-  <%= submit_tag "Checkout on behalf of", :name => nil %>
-<% end %>
-</h4>
+	<% if current_user.member?%>
+		<h4><%= button_to "Checkout for yourself", book_path(:id => @book.id, :type => "self"), method: :post %></h4>
+	<% end %>
+
+	<% if current_user.admin?%>
+		<h4><%= form_tag(book_path, :method => "post", :type => "other",id: @book.id) do %>
+		  <%= text_field_tag :email, params[:email], placeholder: "Email ID" %>
+		  <%= submit_tag "Checkout on behalf of", :name => nil %>
+	<% end %>
+	</h4>
 <% end %>
 
 <% else %>
 
-<% if current_user.admin? %>
-<h4><%= "Taken By " %><font color=black><%= @book.taken_by %></font></h4>
-<% end %>
+	<% if current_user.admin? %>
+		<h4><%= "Taken By " %><font color=black><%= @book.taken_by %></font></h4>
+	<% end %>
 
-<% if @book.taken_by==current_user.email or current_user.admin? %>
-<h4><%= button_to "Return Book", book_path, method: :post %></h4>
-<% else %>
-<h4><%= "Status: " %><font color=red><%= "Not Available" %></font></h4>
-<% end %>
+	<% if @book.taken_by==current_user.email or current_user.admin? %>
+		<h4><%= button_to "Return Book", book_path, method: :post %></h4>
+	<% else %>
+		<h4><%= "Status: " %><font color=red><%= "Not Available" %></font></h4>
+	<% end %>
 
+	<% if @book.taken_by!=current_user.email or current_user.member? %>
+		<h4><%= button_to "Subscribe For Book Availability", subscribe_path(:book=>@book.title), method: :post %></h4>
+	<% end %>
 <% end %>
 
     </section>
